<resources>
    <string name="app_name">zymPro</string>
    <string name="wjmm">忘记密码？</string>
    <string name="yhzc">新用户注册</string>
    <string name="login">登录</string>
    <string name="third_login">第三方登录</string>
    <string name="QQ">QQ</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_school">SearchSchoolActivity</string>


</resources>
