<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yourzeromax.zympro.UI.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/tv_wjmm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:text="@string/wjmm" />

        <TextView
            android:id="@+id/tv_yhzc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:text="@string/yhzc" />

        <Button
            android:id="@+id/btn_login"
            style="@style/loginActivity_dimens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_yhzc"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/login_btn_text_size" />


        <EditText
            android:id="@+id/et_count"
            style="@style/loginActivity_dimens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_password"
            android:layout_marginBottom="8dp"
            android:hint="请输入账号/手机号"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_password"
            style="@style/loginActivity_dimens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_login"
            android:layout_marginBottom="8dp"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:singleLine="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_count"
            android:layout_alignStart="@id/et_count"
            android:layout_marginBottom="@dimen/login_btn_text_size"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RelativeLayout
            android:id="@+id/relative_thirdLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <View
                style="@style/loginActivity_lines"
                android:layout_toLeftOf="@id/tv_thirdLogin" />

            <TextView
                android:id="@+id/tv_thirdLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/third_login" />

            <View
                style="@style/loginActivity_lines"
                android:layout_toRightOf="@id/tv_thirdLogin" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/relative_thirdLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginEnd="@dimen/login_third_dimen"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/weixin"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:text="@string/QQ"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/weixin"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:text="@string/weixin"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:drawableTop="@mipmap/ic_launcher_round"
                android:text="@string/weibo"
                android:gravity="center"
                android:layout_marginStart="@dimen/login_third_dimen"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
